# My-GenAI-Portfolio

./: README.md  cv.json  cv_all.docx  package-lock.json  package.json  pyproject.toml  server copy.py  server.py  server1.py  test_langchain.ipynb  ut1.py  utility.py
public/: index.html
src/: App.css  App.js
src/components/About/: About.js  AboutCard.js  Services.js  Toolstack.js  about.css
src/components/AskAI/: AskAI.js  askai.css
src/components/Experiences/: Experiences.js  experiences.css
src/components/Home/: Home.js  Type.js
src/components/Projects/: ProjectCards.js  Projects.js  project.css
src/components/footer/: Footer.jsx
src/components/navbar/: Navbar.js
