[tool.poetry]
name = "my genai portfolio"
version = "0.1.0"
description = ""
authors = ["YYM-yym <yy2650@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
flask = "^2.3.3"
flask-cors = "^4.0.0"
flask-restful = "^0.3.10"
langchain = "^0.0.279"
openai = "^0.28.0"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
